pagination in analytics